# ai-book-writer

./: .coverage  .env  .gitignore  CONTRIBUTORS.md  README.md  agents.py  authors.md  beginners.md  book_generator.py  config.py  coverage.xml  development.md  env.example  example.config.py  example_outline.txt  fixed_outline.py  main.py  ollama_autogen_test.py  ollama_direct_test.py  ollama_test.py  ollama_test_script.py  outline_generator.py  package-lock.json  pinned_requirements.txt  pyproject.toml  quickstart.sh  repomap.md  requirements.txt  select_genre.py  smolagents_ollama_test.py  streamlit_app.py  tag_release.sh  test_connection.py
ai_book_writer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
book_output/: chapter_01.txt  chapter_02.txt  chapter_03.txt  chapter_04.txt  chapter_05.txt  chapter_06.txt  chapter_07.txt  chapter_08.txt  chapter_09.txt  chapter_10.txt  chapter_11.txt  chapter_12.txt  chapter_13.txt  chapter_14.txt  chapter_15.txt  chapter_16.txt  chapter_17.txt  chapter_18.txt  chapter_19.txt  chapter_20.txt  chapter_21.txt  chapter_22.txt  chapter_23.txt  chapter_24.txt  chapter_25.txt  outline.txt
config/: __init__.py  environments.py  settings.py
config_templates/: README.md  comparative_religion.py  consciousness_studies.py  esoteric_philosophy.py  mysticism.py
docs/: README.md  agents.md  api_reference.md  book_generator.md  config.md  config_py.md  config_templates.md  config_templates_directory.md  contributing.md  deployment.md  developer_guide.md  environment_variables.md  getting_started.md  llm.md  llm_directory.md  (+5 more)
(+36 files in other folders)
